# mini-search-engine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  phases.md  pyproject.toml  requirements.txt
data/sample_docks/: doc1.txt  doc3.txt
data/sample_docs/: doc1.txt  doc2.txt  doc3.txt
scripts/: check_config.py  load_sample_docs.py  setup_db.py
src/mini_search/: config.py  crawler.py  index_builder.py  models.py  pagerank.py  search_docs.py  search_scraped_pages.py  storage.py  tokenizer.py
src/mini_search/storage/: connection.py  document_tokens.py  documents.py  scraped_page_tokens.py  scraped_pages.py
src/mini_search/utils/: scrape_utils.py  url_utils.py
tests/: test_scrape_utils.py
