[build-system]
requires = ["setuptools >= 82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-search-engine"
version = "0.1.0"
dependencies = [
    "beautifulsoup4",
    "nltk",
    "requests",
    "black",
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
